--- a/_output.yml
+++ b/_output.yml
@@ -4,7 +4,7 @@ bookdown::gitbook:
   number_sections: true
   config:
     toc:
-      collapse: section
+      collapse: subsection
       # before: |
       after: |
         <li><a href="https://drive.google.com/file/d/1CZJ4_A2ssI0-V_HszcPoEJyQC1EY2s5u/view">CV</a> </li>
