--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "temp",
+  "name": "master",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/apurvanakade/apurvanakade.github.io.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/apurvanakade/apurvanakade.github.io/issues"
+  },
+  "homepage": "https://github.com/apurvanakade/apurvanakade.github.io#readme",
   "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
     "gulp-file-include": "^2.3.0",
-    "gulp-hash": "^4.2.2",
-    "gulp-markdown": "^6.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-webserver": "^0.5.0",
-    "markdown": "^0.5.0",
-    "run-sequence": "^2.2.1"
+    "gulp-markdown": "^6.0.0"
   }
 }
