--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,6 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Apurva Nakade"
+
+[output.html]
+additional-css = ["theme/css/tufte.css"]
