--- a/_output.yml
+++ b/_output.yml
@@ -23,12 +23,12 @@ bookdown::gitbook:
       size: 2
     sharing:
       facebook: false
-      github: true
+      github: false
       twitter: false
       linkedin: false
       weibo: false
       instapaper: false
       vk: false
       whatsapp: false
-      all: ['github']
+      all: []
     info: true
