--- a/_output.yml
+++ b/_output.yml
@@ -1,6 +1,7 @@
 bookdown::gitbook:
   css: [css/style.css]
-  toc_depth: 3
+  toc_depth: 2
+  number_sections: false
   config:
     toc:
       before: |
