--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,7 +6,13 @@ website:
   navbar:
     left:
       - notes.qmd
-      - CV.qmd
+    right:
+      - icon: github
+        href: https://github.com/apurvnakade/
+        aria-label: GitHub
+      - icon: github
+        href: https://github.com/apurvanakade/
+        aria-label: GitHub
     
   # sidebar: 
   #   style: floating
