--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,6 +7,7 @@ website:
     left:
       - notes.qmd
       - CV.qmd
+      - scribbles/index.qmd
     right:
       - icon: github
         href: https://github.com/apurvanakade/
