--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,13 +1,16 @@
 project:
   type: website
+  output-dir: docs
 
 website:
   title: "Apurva Nakade"
   navbar:
     left:
+      - text: Home
+        href: https://apurvanakade.github.io/scribbles/
       - notes.qmd
       - text: Lean
-        href: https://apurvanakade.github.io/scribbles/lean/index.html
+        href: https://apurvanakade.github.io/scribbles/lean/
       - scribbles/index.qmd
       - CV.qmd
     right:
